; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_araw.c_F32NDecode.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_araw.c_F32NDecode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32)* @F32NDecode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @F32NDecode(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca float*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to float*
  store float* %10, float** %7, align 8
  store i64 0, i64* %8, align 8
  br label %11

11:                                               ; preds = %35, %3
  %12 = load i64, i64* %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = zext i32 %13 to i64
  %15 = icmp ult i64 %12, %14
  br i1 %15, label %16, label %38

16:                                               ; preds = %11
  %17 = load float*, float** %7, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @memcpy(float* %17, i32* %18, i32 4)
  %20 = load float*, float** %7, align 8
  %21 = load float, float* %20, align 4
  %22 = call i32 @isfinite(float %21)
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  %26 = call i64 @unlikely(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %16
  %29 = load float*, float** %7, align 8
  store float 0.000000e+00, float* %29, align 4
  br label %30

30:                                               ; preds = %28, %16
  %31 = load float*, float** %7, align 8
  %32 = getelementptr inbounds float, float* %31, i32 1
  store float* %32, float** %7, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 4
  store i32* %34, i32** %5, align 8
  br label %35

35:                                               ; preds = %30
  %36 = load i64, i64* %8, align 8
  %37 = add i64 %36, 1
  store i64 %37, i64* %8, align 8
  br label %11

38:                                               ; preds = %11
  ret void
}

declare dso_local i32 @memcpy(float*, i32*, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @isfinite(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
